# flare-fl

./: .cursorrules  .gitignore  LICENSE  README.md  flare.code-workspace  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: LLM_CONTEXT.md  best_fl_framework.md  builder_pattern.md  design_patterns.md  flare-awarness.txt
examples/: builder_example.py  comparative_simulation.py  phase2_mi_simulation.py  simple_comparative_simulation.py  simple_mnist_simulation.py  simple_simulation.py  simple_simulation_phase3_vrf.py  test.py
flare/: __init__.py
flare/blockchain/: __init__.py  connectors.py  consensus.py  mock_connector.py  mock_consensus.py
flare/builder/: README.md  __init__.py  client_builder.py  orchestrator_builder.py
flare/compression/: __init__.py  compressors.py  gzip.py  no_compressor.py  power_sgd.py  zlib.py
flare/consensus/: __init__.py  consensus.py  vrf_consensus.py
flare/core/: __init__.py  base_classes.py
flare/federation/: __init__.py  client.py  fedavg_strategy.py  federated_client.py  mi_orchestrator.py  orchestrator.py  strategies.py  vrf_orchestrator.py
flare/federation/aggregation_strategies/: __init__.py  mi_aggregation_strategy.py  strategies.py
flare/models/: __init__.py  adapters.py  mock_model.py  pytorch_adapter.py
flare/storage/: __init__.py  in_memory_storage_provider.py  providers.py
tests/core/: test_config.py
