[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flare-fl"
version = "0.0.1"
authors = [
  { name="[Neisser Villa]", email="[villa.neisser@gmail.com]" },
]
description = "A Python library for federated learning with blockchain and IoT focus."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
keywords = ["federated learning", "blockchain", "iot", "machine learning"]

[project.urls] # Descomenta si tienes un repo
"Homepage" = "https://github.com/Neisser/flare-fl"
"Bug Tracker" = "https://github.com/Neisser/flare-fl/issues"

# TODO: add dependencies here or in requirements.txt
# dependencies = [
#    "numpy>=1.20",
# ]